fixed line height on mobile

--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ li.current-menu-item {
         min-height: 0px;
         width: 100%;
         display: block;
+        line-height: 26px;
     }
 
     .imggrid .wp-caption .wp-caption-text a {
